[package]
name = "neo4j-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "A CLI to interact with Neo4j graph database written in Rust"
authors = ["Roopesh Saravanan <roopeshsaravanan.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/roopeshsn/neo4j-cli/"
license = "MIT OR Apache-2.0"
license-file = "LICENSE.txt"
keywords = ["neo4j", "neo4j-cli", "cli for neo4j" "cli", "client"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
neo4rs = "0.6.2"
rustyline = "12.0.0"
tokio = "1.29.1"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
